# novel-assistant

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  start-mac.command  start-windows.bat  tailwind.config.js  tsconfig.app.json
backend/: __init__.py  ai.py  database.py  llm_runner.py  model_manager.py  prompts.py  server.py  sidecar.py
scripts/: build-backend-sidecar.mjs  check-tauri-prereqs.mjs  dev.mjs  seed-demo.mjs  tauri-dev.mjs
src/: main.tsx  styles.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: App.tsx
src/components/ai/: AiModelControls.tsx  AiPanel.tsx  AiSuggestionList.tsx  MarkdownRenderer.tsx
src/components/editor/: ChapterEditor.tsx
src/components/layout/: ChapterOutlinePanel.tsx  LeftWorkspacePanel.tsx  ReferenceSettingsPanel.tsx  TopBar.tsx
src/hooks/: useNovelProjects.ts
src/lib/: aiClient.ts  aiSuggestions.ts  pdfExport.ts  projectChapters.ts  projectReferences.ts  sampleProject.ts  storage.ts
src/types/: aiSuggestion.ts  novel.ts
