[package]
name = "novel-assistant"
version = "0.1.0"
description = "A local AI-assisted novel writing editor."
authors = ["novel-assistant"]
edition = "2021"
license = "Apache-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
